# tg-voe-bot

./: .env.example  .env.local  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test.txt  text.txt  tree.txt
app/: .env  config.py  exceptions.py  logger.py  main.py
app/bot/filters/: __init__.py  message_filters.py
app/bot/handlers/: __init__.py  deleter.py  main_menu.py
app/bot/handlers/address_flow/: __init__.py  address.py
app/bot/handlers/callbacks/: __init__.py  address.py  back.py  go.py  settings.py  subscriptions.py
app/bot/handlers/commands/: admin.py  start.py
app/bot/keyboards/: __init__.py  address_list.py  city_choose.py  main_menu.py  settings.py  subscriptions.py
app/bot/menus/: __init__.py  about.py  address_list.py  main.py  settings.py
app/bot/menus/address_flow/: address.py
app/bot/states/: address_state.py  admin_state.py
app/bot/utils/: __init__.py  message_editor.py  tg_rate_limit.py
app/services/: __init__.py  fetcher.py  notification_worker.py  parser.py  renderer.py
app/services/models/: __init__.py  address_models.py  parser_models.py  renderer_models.py
app/services/utils/: fetch_wrapper.py  flare_solver.py  parser_helpers.py  renderer_helpers.py
app/storage/: __init__.py  subscription_storage.py  user_storage.py
docker/bot/: Dockerfile
mock_endpoint/: main.py
mock_endpoint/responses_json/: city.json  graph_empty.json  graph_full.json  house.json  json.json  street.json
